--- a/index.css
+++ b/index.css
@@ -6,11 +6,24 @@
 
 span {
 	font-family: "MyFont22" !important;
-	
+
 }
 
 img {
 	width: 100%;
+}
+
+
+body {
+    font-size: 50px; 
+    color: #212529;
+    
+
+}
+.nes-container.is-rounded.is-dark {
+    border-image-slice: 3;
+    border-image-width: 9;
+
 }
 @media (max-width: 410px ) {}
 @media screen and (min-width: 768px) {}
