--- a/index.css
+++ b/index.css
@@ -19,19 +19,160 @@ img {
 
 
 body {
-    font-size: 50px; 
+    
     color: #212529;
 	background-color: black;
+	font-family: "MyFont22" !important;
     
 
+}
+
+header{
+	text-align: center;
+	font-family: 'DotGothic16', sans-serif !important;
+}
+footer{
+	font-family: 'DotGothic16', sans-serif !important;
+}
+
+ul {
+    list-style-type: "";
+    padding: 0;
+    color: aliceblue;
+    margin: 0;
+}
+
+.sns_box {
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+}
+
+.sns {
+    width: 50px;
+    height: 50px;
 }
 .nes-container.is-rounded.is-dark {
     border-image-slice: 3;
     border-image-width: 9;
-
 }
 
-/*mosaic謎の使用*/
 
-@media (max-width: 410px ) {}
-@media screen and (min-width: 768px) {}
+a {
+	text-decoration: none;
+	color: rgb(255, 255, 255);
+	 /* other browsers */
+	display: inline;
+	width: 20%;
+	
+  }
+  ul {
+	list-style-type: "";
+	padding: 0;
+	
+	color: aliceblue;
+	/*text-align-last: justify;  最終行も中央揃えにします */
+	margin: 0;
+	
+  }
+  .sns {
+	width: 50px;
+	height: 50px;
+	
+  }
+  .sns_box{
+	display: flex;
+	justify-content: center;
+	gap: 6px;
+  }
+  .copytxt {
+	margin: 0px;
+	font-size: 70px;
+	font-weight: bold;
+	display: inline-block;
+	
+  }
+  
+
+
+
+
+@media screen and (min-width:480px) { 
+.name{
+		font-size: 69px;
+	}
+}
+@media screen and (min-width:768px) and ( max-width:1024px) {
+
+.followme{
+	width: 900px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #11131f; /* フッターの背景色を設定 */
+    text-align: center;
+    padding: -px; /* 適切なパディングを設定 */
+    color: aliceblue;
+    padding-top: 4px;
+    color: aliceblue;
+    border-top: 5px solid #ffffff;
+
+
+  }
+  ul{
+    font-size: 35px;
+  }
+  .sns {
+    width: 100px;
+    height: 100px;
+    
+  }
+  .sns{
+    vertical-align: bottom;
+  }
+  .svgfile{
+    width: 130px;
+    height: 100px;
+  }
+
+
+  .head_name {
+	
+    margin: 0;
+	color: #ffffff;
+    font-size: 110px;
+    font-family: 'DotGothic16', sans-serif;
+    font-weight: bold;
+    background-color: #000000;
+    letter-spacing: 10px;
+    border: 10px solid #ffffff;
+    border-radius: 50px;
+	margin-bottom: 90px;
+}
+body {
+    font-size: 29px;
+    text-align: center;
+}
+#typed-sample5{
+	font-size: 55px !important;
+	margin-bottom: 50px !important;
+}
+
+.ggg{
+	font-size: 50px;
+}
+}
+
+
+  
+
+@media screen and (min-width:1024px) {
+.name{
+		font-size: 67px;
+	}
+}
