--- a/index.css
+++ b/index.css
@@ -66,7 +66,7 @@ ul {
 
 
 a {
-	text-decoration: none;
+	text-decoration: none !important;
 	color: rgb(255, 255, 255);
 	 /* other browsers */
 	display: inline;
