--- a/index.css
+++ b/index.css
@@ -95,6 +95,38 @@ a {
     font-weight: bold;
   }
 
+  .menu_box_sns {
+    background-color: #11131f;
+    color: aliceblue;
+    border-radius: 10px;
+    border: 6px solid #ffffff;
+    background-color: #181818;
+   
+    display: inline-block;
+    margin-top: 100px;
+  }
+  
+  .sns_twitterclass_li{
+    margin: 200px 0;
+    
+  }
+
+  .sns_twitterclass_li22{
+    padding: 5px 0;
+  }
+
+  .bg{
+    animation: fadein 1s ease-out forwards;
+  }
+  
+  @keyframes fadein {
+    0% {
+      opacity: 0;
+    }
+    100%{
+      opacity: 1;
+    }
+  }
 
   @media (max-width: 320px ) {
     .name{
@@ -109,7 +141,10 @@ a {
   
   
   @media screen and (max-width: 767px) {
-
+    body {
+      font-size: 33px;
+      text-align: center;
+  }
 
   footer {
     position: fixed;
@@ -215,5 +250,7 @@ text-align: center;
     }
 	
   }
+
+
 
 
